[package]
name = "ppc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
mize = { git = "https://github.com/c2vi/mize", default-features = false, features = [ "os-target" ] }
tracing = "0.1.41"
sea-orm = { version = "1.1.0", features = [ "sqlx-mysql", "runtime-tokio", "macros" ] }
tokio = "1.46.1"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = [ "fs" ] }

[lib]
name = "mize_module_ppc"
crate-type =["cdylib", "rlib"]
